# public/swagger/swagger.json
@@ -103,9 +103,9 @@
 		}
 	},
 	"paths": {
-		"/user/allergy/add": {
-			"post": {
-				"operationId": "AddAllergy",
+		"/user/allergy/add/update": {
+			"put": {
+				"operationId": "AddOrUpdateAllergy",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -118,7 +118,7 @@
 						}
 					}
 				},
-				"description": "Add User Allergy",
+				"description": "Update User Allergy",
 				"tags": [
 					"User Routes"
 				],
@@ -134,12 +134,15 @@
 						"application/json": {
 							"schema": {
 								"properties": {
-									"name": {
-										"type": "string"
+									"allergies": {
+										"items": {
+											"$ref": "#/components/schemas/allergiesInterface"
+										},
+										"type": "array"
 									}
 								},
 								"required": [
-									"name"
+									"allergies"
 								],
 								"type": "object"
 							}
@@ -148,9 +151,9 @@
 				}
 			}
 		},
-		"/user/medication/add": {
-			"post": {
-				"operationId": "AddMedication",
+		"/user/medication/add/update": {
+			"put": {
+				"operationId": "AddOrUpdateMedication",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -163,7 +166,7 @@
 						}
 					}
 				},
-				"description": "Add User Medication",
+				"description": "Update User Medication",
 				"tags": [
 					"User Routes"
 				],
@@ -179,20 +182,15 @@
 						"application/json": {
 							"schema": {
 								"properties": {
-									"reason": {
-										"type": "string"
-									},
-									"dose": {
-										"type": "string"
-									},
-									"name": {
-										"type": "string"
+									"medications": {
+										"items": {
+											"$ref": "#/components/schemas/medicationsInterface"
+										},
+										"type": "array"
 									}
 								},
 								"required": [
-									"reason",
-									"dose",
-									"name"
+									"medications"
 								],
 								"type": "object"
 							}
@@ -201,9 +199,9 @@
 				}
 			}
 		},
-		"/user/contact/add": {
-			"post": {
-				"operationId": "AddEmergencyContact",
+		"/user/contact/add/update": {
+			"put": {
+				"operationId": "AddOrUpdateEmergencyContact",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -216,7 +214,7 @@
 						}
 					}
 				},
-				"description": "Add User Emergency Contact",
+				"description": "Update User Emergency Contact",
 				"tags": [
 					"User Routes"
 				],
@@ -232,20 +230,15 @@
 						"application/json": {
 							"schema": {
 								"properties": {
-									"email": {
-										"type": "string"
-									},
-									"phone": {
-										"type": "string"
-									},
-									"name": {
-										"type": "string"
+									"contacts": {
+										"items": {
+											"$ref": "#/components/schemas/emergencyContactInterface"
+										},
+										"type": "array"
 									}
 								},
 								"required": [
-									"email",
-									"phone",
-									"name"
+									"contacts"
 								],
 								"type": "object"
 							}
@@ -401,169 +394,6 @@
 					}
 				],
 				"parameters": []
-			}
-		},
-		"/user/allergy/update": {
-			"put": {
-				"operationId": "UpdateAllergy",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/ApiResponse"
-								}
-							}
-						}
-					}
-				},
-				"description": "Update User Allergy",
-				"tags": [
-					"User Routes"
-				],
-				"security": [
-					{
-						"Bearer": []
-					}
-				],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"properties": {
-									"name": {
-										"type": "string"
-									},
-									"allergy_id": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"name",
-									"allergy_id"
-								],
-								"type": "object"
-							}
-						}
-					}
-				}
-			}
-		},
-		"/user/medication/update": {
-			"put": {
-				"operationId": "UpdateMedication",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/ApiResponse"
-								}
-							}
-						}
-					}
-				},
-				"description": "Update User Medication",
-				"tags": [
-					"User Routes"
-				],
-				"security": [
-					{
-						"Bearer": []
-					}
-				],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"properties": {
-									"reason": {
-										"type": "string"
-									},
-									"dose": {
-										"type": "string"
-									},
-									"name": {
-										"type": "string"
-									},
-									"medication_id": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"reason",
-									"dose",
-									"name",
-									"medication_id"
-								],
-								"type": "object"
-							}
-						}
-					}
-				}
-			}
-		},
-		"/user/contact/update": {
-			"put": {
-				"operationId": "UpdateEmergencyContact",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/ApiResponse"
-								}
-							}
-						}
-					}
-				},
-				"description": "Update User Emergency Contact",
-				"tags": [
-					"User Routes"
-				],
-				"security": [
-					{
-						"Bearer": []
-					}
-				],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"properties": {
-									"email": {
-										"type": "string"
-									},
-									"phone": {
-										"type": "string"
-									},
-									"name": {
-										"type": "string"
-									},
-									"contact_id": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"email",
-									"phone",
-									"name",
-									"contact_id"
-								],
-								"type": "object"
-							}
-						}
-					}
-				}
 			}
 		},
 		"/user/info/delete": {
@@ -748,41 +578,10 @@
 						"application/json": {
 							"schema": {
 								"properties": {
-									"emergency_contacts": {
-										"items": {
-											"$ref": "#/components/schemas/emergencyContactInterface"
-										},
-										"type": "array"
-									},
-									"medications": {
-										"items": {
-											"$ref": "#/components/schemas/medicationsInterface"
-										},
-										"type": "array"
-									},
-									"allergies": {
-										"items": {
-											"$ref": "#/components/schemas/allergiesInterface"
-										},
-										"type": "array"
-									},
-									"blood_group": {
-										"type": "string"
-									},
-									"dob": {
-										"type": "number",
-										"format": "double"
-									},
 									"password": {
 										"type": "string"
 									},
 									"email": {
-										"type": "string"
-									},
-									"last_name": {
-										"type": "string"
-									},
-									"first_name": {
 										"type": "string"
 									},
 									"display_name": {
@@ -790,15 +589,8 @@
 									}
 								},
 								"required": [
-									"emergency_contacts",
-									"medications",
-									"allergies",
-									"blood_group",
-									"dob",
 									"password",
 									"email",
-									"last_name",
-									"first_name",
 									"display_name"
 								],
 								"type": "object"
