# src/handlers/User/user.auth.handler.ts
@@ -44,7 +44,7 @@ const UserAuthHandler = {
 
 
     register: async (data: any, profile_pic: any): Promise<ApiResponse> => {
-        const { email, password, allergies, medications, emergency_contacts } = data;
+        const { email, password } = data;
         // check if user exists
         const exists = await findOne(userModel, { email, status: { $ne: USER_STATUS.DELETED } });
         if (exists.status) {
@@ -61,27 +61,27 @@ const UserAuthHandler = {
             return showResponse(false, responseMessage.common.error_while_create_acc, null, statusCodes.API_ERROR)
         }
         //after successfull registration of the user save allergies medications and emergency contacts as well
-        const allergiesPayload = allergies?.map((all: any) => { return { ...all, user_id: result?.data?._id } })
-        const medicationsPayload = medications?.map((medic: any) => { return { ...medic, user_id: result?.data?._id } })
-        const emergencyContactsPayload = emergency_contacts?.map((contac: any) => { return { ...contac, user_id: result?.data?._id } })
+        // const allergiesPayload = allergies?.map((all: any) => { return { ...all, user_id: result?.data?._id } })
+        // const medicationsPayload = medications?.map((medic: any) => { return { ...medic, user_id: result?.data?._id } })
+        // const emergencyContactsPayload = emergency_contacts?.map((contac: any) => { return { ...contac, user_id: result?.data?._id } })
 
-        const saveAllergies = await insertMany(userAllergiesModel, allergiesPayload)
-        if (!saveAllergies.status) {
-            return showResponse(false, responseMessage.users.register_error, {}, statusCodes.API_ERROR)
-        }
-        const saveMedications = await insertMany(userMedicationModel, medicationsPayload)
-        if (!saveMedications.status) {
-            return showResponse(false, responseMessage.users.register_error, {}, statusCodes.API_ERROR)
-        }
-        const saveEmergencyContacts = await insertMany(userEmergencyContact, emergencyContactsPayload)
-        if (!saveEmergencyContacts.status) {
-            return showResponse(false, responseMessage.users.register_error, {}, statusCodes.API_ERROR)
-        }
+        // const saveAllergies = await insertMany(userAllergiesModel, allergiesPayload)
+        // if (!saveAllergies.status) {
+        //     return showResponse(false, responseMessage.users.register_error, {}, statusCodes.API_ERROR)
+        // }
+        // const saveMedications = await insertMany(userMedicationModel, medicationsPayload)
+        // if (!saveMedications.status) {
+        //     return showResponse(false, responseMessage.users.register_error, {}, statusCodes.API_ERROR)
+        // }
+        // const saveEmergencyContacts = await insertMany(userEmergencyContact, emergencyContactsPayload)
+        // if (!saveEmergencyContacts.status) {
+        //     return showResponse(false, responseMessage.users.register_error, {}, statusCodes.API_ERROR)
+        // }
 
         delete result?.data.password
 
-        const token = await generateJwtToken(exists.data._id, { user_type: 'user', type: "access", role: exists?.data?.user_type }, APP.ACCESS_EXPIRY)
-        const refresh_token = await generateJwtToken(exists.data._id, { user_type: 'user', type: "access", role: exists?.data?.user_type }, APP.REFRESH_EXPIRY)
+        const token = await generateJwtToken(result.data?._id, { user_type: 'user', type: "access", role: result?.data?.user_type }, APP.ACCESS_EXPIRY)
+        const refresh_token = await generateJwtToken(result.data?._id, { user_type: 'user', type: "access", role: result?.data?.user_type }, APP.REFRESH_EXPIRY)
 
         return showResponse(true, responseMessage.users.register_success, { token, refresh_token }, statusCodes.SUCCESS)
 
@@ -245,6 +245,7 @@ const UserAuthHandler = {
     updateUserProfile: async (data: any, user_id: string, profile_pic: any): Promise<ApiResponse> => {
         const { display_name, first_name, last_name, dob, blood_group } = data
 
+        console.log(user_id, "user_id,")
         const findUser = await findOne(userModel, { user_type: ROLE.USER, _id: user_id, status: { $ne: USER_STATUS.DELETED } })
         if (!findUser.status) {
             return showResponse(false, responseMessage.users.invalid_user, null, statusCodes.API_ERROR);
